Bug 237541 - Dolphin 'Sort by Name' View does not work properly
Summary: Dolphin 'Sort by Name' View does not work properly
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-13 21:08 UTC by j0sh
Modified: 2023-01-24 12:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A snapshot of how the list view shows the flaw (49.00 KB, image/png)
2010-05-13 21:13 UTC, j0sh
Details
Screenshot of wrong sort order (56.80 KB, image/png)
2023-01-14 08:42 UTC, rsbrux
Details

Note You need to log in before you can comment on or make changes to this bug.
Description j0sh 2010-05-13 21:08:38 UTC
Version:           1.4 (using 4.4.3 (KDE 4.4.3), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.33-ARCH

The 'Sort by Name' View mode in dolphin does not sort in order sometimes.

Ex:- The file 'Car and Driver 2009-05 (May 2009)'  is placed before 'Car and Driver 2008-11 (November 2008)' , however 'Car and Driver 2009-04 (April 2009)' is placed after 'Car and Driver 2008-11 (November 2008)' in the list.

Interestingly when I copy a new file into the folder, the old unsorted file gets sorted out in order, while the new files that were copied remain unsorted and always at the top of the list until a new file is again copied into the folder.
Comment 1 j0sh 2010-05-13 21:13:29 UTC
Created attachment 43551 [details]
A snapshot of how the list view shows the flaw

The 'May 2009' and 'November 2009' files at the top of the list are not sorted. These are new files that were copied together into the folder.

Interestingly the sorted file 'June 2010' was also unsorted, but after the above mentioned files were copied into the folder, 'June 2010' was automatically sorted out.
Comment 2 Elisabeth Penz 2010-05-14 17:24:32 UTC
SVN commit 1126664 by ppenz:

Backport of SVN commit 1126660: Fix 2 issues in combination with natural sorting.

CCBUG: 237541
CCBUG: 237551

 M  +31 -0     tests/kstringhandlertest.cpp  
 M  +3 -3      text/kstringhandler.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1126664
Comment 3 rsbrux 2023-01-14 08:42:15 UTC
Created attachment 155273 [details]
Screenshot of wrong sort order

This is happening to me in Dolphin 22.04.3 running under Ubuntu Studio 22.04 (KDE Plasma 5.24.7)
Comment 4 rsbrux 2023-01-14 08:42:46 UTC
This is happening to me in Dolphin 22.04.3 running under Ubuntu Studio 22.04 (KDE Plasma 5.24.7)
Comment 5 Felix Ernst 2023-01-24 01:05:12 UTC
Please don't reopen bug reports that have been closed/fixed for so many years. They are most likely not relevant to your problem anymore.

Your picture does not show a bug as far as I can tell. Check if you have "natural sorting" enabled in Dolphin Settings>General>Behaviour>sort mode. "Natural sorting" sorts 3 before 10 because 3 is a smaller number than 10. If you disable that, it will sort lexically which puts 10 before 3. (You might have to restart Dolphin for this to take effect.)

Similarly 20190512 is a bigger number than 202212. Dolphin can not guess if the number is meant to represent a date.
Comment 6 rsbrux 2023-01-24 07:17:52 UTC
Thanks for your explanation. I wasn't aware of that feature, perhaps because it was under "Settings - Configure Dolphin" and not under "View - Sort By", where I would have expected it.
Comment 7 Felix Ernst 2023-01-24 12:17:13 UTC
(In reply to rsbrux from comment #6)
> Thanks for your explanation. I wasn't aware of that feature, perhaps because
> it was under "Settings - Configure Dolphin" and not under "View - Sort By",
> where I would have expected it.

I agree with you on that. I am quite unhappy about how Dolphin's settings are organised as well. See https://invent.kde.org/system/dolphin/-/issues/36 for details.

In the new organisation I am proposing there the sorting would actually end up in View Area>General>Sorting mode:  (X) Natural.