Fix 2 issues in combination with natural sorting.

BUG: 237541
BUG: 237551

svn path=/trunk/KDE/kdelibs/; revision=1126660